fix
made the divs go all the way across game instead of missing section that was cut off

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root{
+    --width: 400px;
+}
 *{
     padding: 0;
     margin: 0;
@@ -45,6 +48,6 @@ button{
 }
 @keyframes side{
     0%{left:0px}
-    50%{left:400px}
+    50%{left:var(--width)}
     100%{left:0px}
 }
